--- a/src/components/NewQuestionForm/NewQuestionForm.css
+++ b/src/components/NewQuestionForm/NewQuestionForm.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
     display: 'flex',
     flexDirection: 'column',
     alignItems: 'center',
@@ -37,4 +37,4 @@
 .optionsButton {
     width: '70%',
     alignSelf: 'center'
-}
+} */
