--- a/src/components/Navigation/NavBar/NavBar.module.css
+++ b/src/components/Navigation/NavBar/NavBar.module.css
@@ -1,4 +1,5 @@
-.Link {
-    text-decoration: none;
-    color: white;
+@media (max-width: 1096px) {
+    .DesktopOnly {
+        display: none;
+    }
 }
