--- a/src/components/UI/Spinner/Spinner.module.css
+++ b/src/components/UI/Spinner/Spinner.module.css
@@ -4,7 +4,7 @@
   border-radius: 50%;
 }
 .Loader {
-  color: #ff8000;
+  color: #006A8E;
   font-size: 11px;
   text-indent: -99999em;
   margin: 55px auto;
@@ -24,7 +24,7 @@
 .Loader:before {
   width: 5.2em;
   height: 10.2em;
-  background: #fff;
+  background: white;
   border-radius: 10.2em 0 0 10.2em;
   top: -0.1em;
   left: -0.1em;
@@ -36,7 +36,7 @@
 .Loader:after {
   width: 5.2em;
   height: 10.2em;
-  background: #fff;
+  background: white;
   border-radius: 0 10.2em 10.2em 0;
   top: -0.1em;
   left: 4.9em;
