before merge with dev

--- a/src/containers/Tracks/Tracks.module.css
+++ b/src/containers/Tracks/Tracks.module.css
@@ -1,10 +1,11 @@
 .topContainer {
     display: flex;
     flex-direction: row;
+    justify-content: space-evenly;
     flex-wrap: nowrap;
     height: 100%;
 }
 
 .checkpointsContainer {
-    width: 30%;
+    width: 33%;
 }
